@@ -289,6 +289,7 @@ extra5.test \
 extra6.test \
 extra7.test \
 extra8.test \
+extra9.test \
 f90only.test \
 flavor.test \
 flibs.test \
