@@ -1,5 +1,9 @@
 2009-11-14  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	Coverage: warn about substitutions that need EXTRA_PRIMARY.
+	* tests/extra9.test: New test.
+	* tests/Makefile.am: Adjust.
+
 	Coverage: warn about configure substitution in EXTRA_PRIMARY.
 	* tests/subst5.test: New test.
 	* tests/Makefile.am: Update.
